--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-     <img id="logo" src="logo.png" alt="logo">
+     <img id="logo" src="logo.webp" alt="logo">
 
      <div class="menu">
         <ul>
