update paragraph and whitepaper

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </ul>
      </div>
      <p>
-        Welcome to Ties'N'Guns, the revolutionary blockchain-based First-Person Shooter that redefines the NFT gaming experience. 
+        Welcome to Ties'N'Guns, the revolutionary blockchain-based Battle-Royale which redefines the NFT gaming experience. 
         In our competitive universe, your account and all customizations are NFTs, offering unparalleled player freedom and expression. 
-        Set in a stylized world where corporate warfare has gone wild, you'll need to master the game's mechanics—NFTs won't guarantee victory. 
-        Inspired by iconic shooters like CS, Valorant, and Overwatch, Ties'N'Guns emphasizes skill, strategy, and community-driven development. 
+        Set in a stylized world where corporate warfare has gone wild, you'll need to master the game's mechanics — NFTs won't guarantee victory. 
+        Inspired by iconic games such as CS and Agar.io, Ties'N'Guns emphasizes skill, strategy, and community-driven development. 
         Explore our vision and join us in shaping the future of NFT gaming!
     </p>
 </body>
