Add Twitter Link

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <ul>
             <li><a href="whitepaper.pdf" target="_blank">Whitepaper</a></li>
             <li><a href="https://discord.gg/pHcxTDK8WG" target="_blank">Discord</a></li>
+            <li><a href="https://x.com/tiesnguns">Twitter</a></li>
         </ul>
      </div>
      <p>
