--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         Set in a stylized world where corporate warfare has gone wild, you'll need to master the game's mechanics — NFTs won't guarantee victory. 
         Inspired by iconic games such as Fortnite and Agar.io, Ties'N'Guns emphasizes skill, strategy, and community-driven development. 
         Explore our vision and join us in shaping the future of NFT gaming!
+
+        Edit: Project has been cancelled due to lack of funding. This website will be left up for archival purposes.
     </p>
 </body>
 </html>
